<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpFragment"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/abBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/round_arrow_back_ios_new_24_black"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnhelp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginLeft="120dp"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/btnset"
        android:layout_below="@id/abBack"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help2"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textColor="@color/hijau"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/edt_help1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="70dp"
                        android:text="@string/phone"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/round_phone_24" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/edt_help2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="70dp"
                        android:text="@string/emailapp"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/outline_email_24_black" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/edt_help3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="70dp"
                        android:text="@string/instagram"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/instagram" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/edt_help4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="70dp"
                        android:text="@string/twetter"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/twitter" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/edt_help5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="70dp"
                        android:text="@string/web"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/baseline_language_24_black" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>