<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyFragment"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/abBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/round_arrow_back_ios_new_24_black"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnprivasi"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginLeft="120dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnsetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abBack"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="50dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/btnset"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/edt_about1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="70dp"
                    android:text="@string/priv_teman"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/outline_group_24" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="120dp"/>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/btnset"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/edt_about2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="70dp"
                    android:text="@string/priv_publik"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/round_public_24" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="120dp"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>